refactoring to reactive stack